Add vim scrolling to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
 # Set prefix C-a
 #set-option -g prefix C-a
 
+set-window-option -g mode-keys vi
+
 # Reload source file
 bind r source-file ~/.tmux.conf
 
